# kingfisher

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  Cargo.toml  Makefile  NOTICE  README.md  README_NEW.md  nextest.toml
.github/workflows/: ci.yml  pypi.yml  release.yml
crates/kingfisher-core/: Cargo.toml  README.md
crates/kingfisher-core/src/: blob.rs  content_type.rs  lib.rs
crates/kingfisher-rules/: Cargo.toml  README.md  build.rs
crates/kingfisher-rules/data/rules/: adafruitio.yml  adobe.yml  age.yml  ai21.yml  algolia.yml  alibaba.yml  amplitude.yml  anthropic.yml  anypoint.yml  artifactory.yml  asana.yml  atlassian.yml  aws.yml  azure.yml  azurestorage.yml  beamer.yml  bitbucket.yml  blynk.yml  ciscomeraki.yml  clearbit.yml  clickhouse.yml  clojars.yml  cloudflare.yml  codacy.yml  codeclimate.yml  codecov.yml  coderabbit.yml  confluent.yml  crates.io.yml  credentials.yml  databricks.yml  deepgram.yml  dependency_track.yml  digitalocean.yml  discord.yml  django.yml  docker.yml  dockerhub.yml  dropbox.yml  easypost.yml  (+94 more)
crates/kingfisher-rules/src/: lib.rs  rule.rs
crates/kingfisher-scanner/: Cargo.toml  README.md
crates/kingfisher-scanner/src/: lib.rs  primitives.rs  scanner.rs
crates/kingfisher-scanner/src/validation/: aws.rs  azure.rs  coinbase.rs  gcp.rs  http_validation.rs  jdbc.rs  jwt.rs  mod.rs  mongodb.rs  mysql.rs  postgres.rs
data/default/rule_cleanup/: check_endpoints.py  check_references.py
data/rules/: age.yml  airtable.yml  asana.yml  aws.yml  circleci.yml  deepseek.yml  discord.yml  dockerhub.yml  mercury.yml  neon.yml  netrc.yml  planetscale.yml
docs/: ACCESS_MAP.md  ADVANCED.md  BASELINE.md  COMPARISON.md  FINGERPRINT.md  INSTALLATION.md  INTEGRATIONS.md  LIBRARY.md  MULTI_STEP_REVOCATION.md  PARSING.md  PYPI.md  REVOCATION_VERIFICATION_NOTES.md  RULES.md  TOKEN_REVOCATION_SUPPORT.md  USAGE.md
docs/access-map-viewer/: index.html
docs/demos/: kingfisher-usage-access-map-01.tape
pypi/: README.md  pyproject.toml
pypi/kingfisher/: __init__.py
scripts/: build-pypi-wheel.sh  install-husky.sh  kingfisher-pre-commit-auto.ps1  kingfisher-pre-commit-auto.sh
src/: access_map.rs  azure.rs  baseline.rs  bitbucket.rs  content_type.rs  decompress.rs  direct_revoke.rs  direct_validate.rs  findings_store.rs  git_binary.rs  git_host.rs  git_metadata_graph.rs  git_repo_enumerator.rs  gitea.rs  github.rs  gitlab.rs  grpc_validation.rs  jira.rs  lib.rs  main.rs  matcher.rs  pyc.rs  reporter.rs  rule_loader.rs  rules.rs  s3.rs  sqlite.rs  validation.rs  validation_rate_limit.rs
src/access_map/: anthropic.rs  bitbucket.rs  buildkite.rs  gcp.rs  gitea.rs  github.rs  harness.rs  huggingface.rs  mongodb.rs  openai.rs  postgres.rs  salesforce.rs  unkey.rs
src/cli/commands/: access_map.rs  inputs.rs  output.rs  scan.rs  validate.rs  view.rs
src/matcher/: base64_decode.rs  captures.rs  conversion.rs  dedup.rs  filter.rs  fingerprint.rs  mod.rs
src/reporter/: html_format.rs  json_format.rs  pretty_format.rs  sarif_format.rs
src/scanner/: enumerate.rs  processing.rs  repos.rs  runner.rs  summary.rs  util.rs  validation.rs
src/validation/: gcp.rs  httpvalidation.rs
tests/: cli.rs  cli_failure.rs  cli_git_clone_flags.rs  fingerprint_dedup.rs  int_allowlist.rs  int_bitbucket.rs  int_dedup.rs  int_github.rs  int_gitlab.rs  int_redact.rs  int_slack.rs  int_validation_cache.rs  int_vulnerable_files.rs  library_crates_external_project.rs  smoke_github_homebrew.rs  smoke_sqlite.rs  tls_mode.rs
