[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kingfisher-bin"
description = "Kingfisher secret scanning CLI (packaged binary)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [
  { name = "MongoDB" }
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/mongodb/kingfisher"
Repository = "https://github.com/mongodb/kingfisher"

[project.scripts]
kingfisher = "kingfisher:main"

[tool.hatch.version]
path = "kingfisher/_version.py"

[tool.hatch.build]
ignore-vcs = true
include = [
  "kingfisher/**/*.py",
  "kingfisher/bin/*",
  "README.md",
]

[tool.hatch.build.targets.wheel]
only-include = [
  "kingfisher",
  "README.md",
]
