[package]
name = "kingfisher-core"
version = "0.1.0"
description = "Core types and traits for Kingfisher secret scanner"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[dependencies]
# Serialization
serde = { workspace = true, features = ["rc"] }
serde_json.workspace = true
schemars.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Hashing and crypto
sha1.workspace = true
hex.workspace = true

# Memory management
memmap2 = "0.9"
once_cell.workspace = true
parking_lot.workspace = true

# Collections
smallvec.workspace = true
rustc-hash.workspace = true
dashmap = "6.1"

# Byte string handling
bstr.workspace = true
memchr = "2.7"

# Git types (minimal, for ObjectId and Time)
gix = { version = "0.73", default-features = false, features = ["serde"] }

# Console formatting
console = "0.15"

# Language detection for content types
tokei = "14.0.0"

[dev-dependencies]
pretty_assertions = "1.4"
