[package]
name = "kingfisher-rules"
version = "0.1.0"
description = "Rule definitions and database for Kingfisher secret scanner"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
# Internal dependencies
kingfisher-core = { path = "../kingfisher-core" }

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
schemars.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Regex
regex.workspace = true
lazy_static = "1.5"

# Hashing
xxhash-rust.workspace = true

# Liquid templating (for checksum validation)
liquid = "0.26"
liquid-core = "0.26"

# Crypto for liquid filters
base64.workspace = true
crc32fast = "1.5"
hmac.workspace = true
sha1.workspace = true
sha2.workspace = true
percent-encoding.workspace = true
time.workspace = true
uuid = { workspace = true, features = ["v4"] }
rand.workspace = true

# Vectorscan for pattern matching
vectorscan-rs.workspace = true

# Logging
tracing.workspace = true

# File walking
walkdir.workspace = true
ignore.workspace = true

# Embedded rule files
include_dir.workspace = true

[dev-dependencies]
pretty_assertions = "1.4"
proptest = "1.6"
